syntax = "proto3";
package config_proto;
option go_package = "../service/UserService";

service UserService {
  // 登录
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
  // 获取vpn节点
  rpc GetVpnNode(GetVpnNodeRequest) returns (GetVpnNodeResponse);
  // VPN编排链表
  rpc VpnChainList(VpnChainListRequest) returns (VpnChainListResponse);
}

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message UserLoginResponse {
  int32 status = 1; //0成功 1失败
  string msg = 2;
}

message GetVpnNodeRequest {
}

message GetVpnNodeResponse {
  int32 status = 1; //0成功 1失败
  string msg = 2;
  repeated VpnNode vpn_nodes = 3;
}
 message VpnNode {
  string uuid = 1;
  string ip = 2;
  string name = 3;
 }

message VpnChainListRequest {
  repeated string vpn_chain_id_list = 1; // vpn_node uuid 按用户选择的顺序
  string chain_name = 2; //链路名称
}

message VpnChainListResponse {
  int32 status = 1; //0成功 1失败
  string msg = 2;
}